--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "src/app/free-trial-student/page.jsx"  ],
   "exclude": ["node_modules"]
 }
