--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.555.0",
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
