--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.69.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.17",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
